in parts(), add a crash guard against an empty KMime::Message payload

BUG: 291902
MERGE: 4.8
FIXED-IN: 4.8.1
(cherry picked from commit b1b244400f67688ffd265c8f95e5aed4d124e86e)